<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_item_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/back_marble1"
    android:padding="15dp">

    <TextView
        android:id="@+id/term_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:text="@string/textView_Term"

        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/separator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@id/definition_text"
        android:layout_toEndOf="@id/term_text"
        android:text="@string/separator"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/definition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:text="@string/textView_Def"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_deleteRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator_text"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/button_Delete"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>