<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_item_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"

    android:background="@drawable/back_wood11"
    android:padding="15dp">

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/architects_daughter"
        android:paddingBottom="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_Revise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textview"
        android:layout_toStartOf="@id/button_Edit"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="15dp"

        android:paddingRight="15dp"
        android:text="@string/button_Revise"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textview"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="15dp"

        android:paddingRight="15dp"
        android:text="@string/button_Edit"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textview"
        android:layout_toEndOf="@id/button_Edit"
        android:background="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:paddingLeft="15dp"

        android:paddingRight="15dp"
        android:text="@string/button_Delete"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</RelativeLayout>