<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_blue1"
    tools:context=".EditTableActivity">

    <EditText
        android:id="@+id/editTextTerm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_Term"
        app:layout_constraintTop_toTopOf="@+id/textView_Term" />

    <EditText
        android:id="@+id/editTextDef"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Def"
        app:layout_constraintEnd_toEndOf="@+id/editTextTerm"
        app:layout_constraintStart_toStartOf="@+id/editTextTerm"
        app:layout_constraintTop_toTopOf="@+id/textView_Def" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_Edit"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Term"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/textView_Term"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <TextView
        android:id="@+id/textView_Def"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/textView_Def"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_Add_Row"
        app:layout_constraintEnd_toEndOf="@+id/textView_Term"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Term" />

    <Button
        android:id="@+id/button_Add_Row"
        android:layout_width="139dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_blue1"
        android:onClick="onAddRowClicked"
        android:text="@string/button_Add"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>